# legalAide_AI

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: frontend.md
frontend/: package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AppShell.tsx  ChunkCard.tsx  FilterPanel.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: Cases.tsx  Dashboard.tsx  Ingestion.tsx  Research.tsx  Sync.tsx
legal_aide/: __init__.py  config.py  main.py
legal_aide/api/: __init__.py  routes.py
legal_aide/db/: __init__.py  models.py  queries.py  search.py  session.py
legal_aide/embeddings/: __init__.py  client.py
legal_aide/ingestion/: __init__.py  ocr.py  parsing.py  pipeline.py
legal_aide/rag/: __init__.py  qa.py
legal_aide/sync/: __init__.py  service.py
migrations/: 001_init.sql  002_sync_module.sql
scripts/: scrape_elibrary.py
